Add Dependencies with unit tests